--- a/example/index.html
+++ b/example/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <title>Title of the document</title>
-        <script src='/r34k7.js'></script>
+        <script src='../dist/vendor.js'></script>
     </head>
 
     <body>
         <div id="content">The content of the document......</div>
-
-        <script src='/r34k7example.js'></script>
+        <script src='../dist/r34k7example.js'></script>
     </body>
 </html>
